--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,18 @@
+:root {
+--branding-color: #731d1d;
+--secondary-color: aliceblue; 
+--heading-font-family: 'Outfit',sans-serif;
 
+
+}
 h1 {
-    font-family: 'Outfit',sans-serif;
+    font-family: var(--heading-font-family);
+    font-size: 50px;
+    font-weight: bold;
+}
+.intro {
+    background-color: var(--branding-color);
+    color: var(--secondary-color);
+    text-align: center;
+    padding: 160px 20px;
 }
