--- a/src/style.css
+++ b/src/style.css
@@ -15,4 +15,30 @@ h1 {
     color: var(--secondary-color);
     text-align: center;
     padding: 160px 20px;
+
+}
+.content {
+    color: rgb(33, 29, 29);
+    padding: 120px 60px;
+}
+.content p {
+    font-size: 16px;
+    
+}
+.btn-branding {
+background: var(--branding-color);
+border-radius: 4px;
+color: var(--secondary-color);
+font-size: 18px;
+line-height: 27px;
+padding: 15px 30px;
+}
+.btn-branding-outline {
+    font-family: var(--heading-font-family);
+border-radius: 4px;
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+    font-size: 18px;
+    line-height: 27px;
+    padding: 10px 20px;
 }
