--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,9 @@ h1 {
     font-size: 16px;
     
 }
+
+
+
 .btn-branding {
 background: var(--branding-color);
 border-radius: 4px;
@@ -35,10 +38,17 @@ padding: 15px 30px;
 }
 .btn-branding-outline {
     font-family: var(--heading-font-family);
-border-radius: 4px;
+    border-radius: 4px;
     color: var(--branding-color);
     border: 1px solid var(--branding-color);
     font-size: 18px;
     line-height: 27px;
     padding: 10px 20px;
+}
+
+@media (max-width: 960px) {
+    .content {
+        padding: 0;
+        text-align: center;
+    }
 }
