--- a/src/style.css
+++ b/src/style.css
@@ -9,19 +9,19 @@
 
 h1 {
     font-family: var(--heading-font-family);
-    font-size: 70px;
+    font-size: 80px;
     font-weight: bold;
 }
 .intro {
     background-color: var(--branding-color);
     color: var(--secondary-color);
     text-align: center;
-    padding: 120px 20px;
+    padding: 100px 20px;
 
 }
 .content {
     color: rgb(33, 29, 29);
-    padding: 120px 60px;
+    padding: 120px 60px;}
     
 .content p {
     font-size: 16px;
