--- a/src/style.css
+++ b/src/style.css
@@ -56,4 +56,41 @@ padding: 15px 30px;
     h1 {
         font-size: 50px;
     }
+
+    .about-section {
+        text-align: center;
+        padding: 0;
+    }
+    .about-me {
+        text-align: center;
+        padding: 0;
+        margin: 0%;
+        
+    }
+}
+
+.about-section {
+    padding: 80px 20px;
+
+}
+
+.about-me {
+    margin: 30px;
+
+   
+}
+.about-section h {
+    font-size: 64px;
+    line-height: 70px;
+    font-family: var(--heading-font-family);
+}
+.about-section p {
+    font-size: 18px;
+   
+}
+.about-section img {
+    padding: 18px 0;
+  
+    
+    
 }
